# TDCR_Cosserat_Rod_Model

./: .gitignore  CMakeLists.txt  README.md  main.cpp  setup.py  tdrc_test.py  visualizer.py
bindings/: pybindings.cpp
examples/: CMakeLists.txt  main.cpp  tdcr_example.cpp  tdcr_torch_backend.py  tdcr_torch_example.py  tdrc_cpp_example.py  tdrc_pybind_example.py  utils.py  visualizer.py
examples/output/: backbone.csv  visualizer.py
include/: MathOperations.hpp  ODEsystems.hpp  TDCR.hpp  pybindings.hpp
lib_tdcr/: CMakeLists.txt
lib_tdcr/include/: MathOperations.hpp  ODEsystems.hpp  TDCR-eq6.hpp  TDCR.hpp
pybindings/: CMakeLists.txt  pybindings.hpp
python/tdcr_torch/: __init__.py  tdcr_physics.py  tdcr_robot.py
python/tdcr_torch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: pybindings.cpp
